updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/deborah-itepu">LinkedIn</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/ 
+deborah-itepu-923217231">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/chantellechri14/">Twitter</a>
         <p class="copyright">© 2022 deborah itepu.</p>
     </div>
