--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="profile">
             <img src="images/debbie.png" alt="debbie-img">
             <h2>Hello.</h2>
-            <p class="intro">I am a web developer and the CEO of Debbie's kitchen. I ❤ cooking and i run a food delivery
+            <p class="intro">I am a full stack web developer and the CEO of Debbie's kitchen. I ❤ cooking and i run a food delivery
                 service.
             </p>
         </div>
@@ -43,7 +43,7 @@
                 <img class="webdev-img" src="images/webdev.jpg" alt="webdev-img">
 
                 <h3>DESIGN & DEVELOPMENT</h3>
-                <p> I started coding when i was intrigued about how the internet works, overtime i have come
+                <p>this is my first website 😊, I started coding when i was intrigued about how the internet works, overtime i have come
                     to fall deeply inlove with it and i've gained vast experience in web applications. </p>
 
             </div>
@@ -61,7 +61,7 @@
             <h2>Get In Touch</h2>
             <p class="contact-message">If you love what you see, then hit me up so i can create something wonderful that
                 fits your taste... be it food or web apps.</p>
-            <a class="btn" href="mailto:itepuchantelle@gmail.com">CONTACT ME</a>
+            <a class="btn" href="mailto:codewithdeb7@gmail.com">CONTACT ME</a>
         </div>
     </div>
 
