--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img class="webdev-img" src="images/webdev.jpg" alt="webdev-img">
 
                 <h3>DESIGN & DEVELOPMENT</h3>
-                <p>this is my first website 😊, I started coding when i was intrigued about how the internet works, overtime i have come
+                <p>This is my first website 😊 and I'm on the road to building many more, I started coding when i was intrigued about how the internet works, overtime i have come
                     to fall deeply inlove with it and i've gained vast experience in web applications. </p>
 
             </div>
